--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -59,7 +59,9 @@
       border: none;
       color: #fff;
     }
-
+    .row.social_Login {
+      cursor: pointer;
+  }
     @media(max-width: 575px){
       /*forgot password modal css start*/
       .submit_mail button {
