--- a/src/app/my-event/my-event.component.html
+++ b/src/app/my-event/my-event.component.html
@@ -1,5 +1,5 @@
 <!-- New design implement -->
-<div id="loading" *ngIf="">
+<div id="loading">
     <img id="loading-image" src="/assets/images/loader.gif" alt="Loading..." />
 </div>
 
