--- a/src/app/view-event/view-event.component.html
+++ b/src/app/view-event/view-event.component.html
@@ -15,8 +15,8 @@
         </div>
         <h3 class="text-center user_name" data-toggle="tooltip" title="{{eventHashTag}}">{{eventHashTag}}</h3>
 
-        <div class="cart_pic text-center" (click)="myCart(item._id)" *ngFor= "let item of allDetailsofEvent" >
-            <img src="/assets/images/cart.png" data-toggle="tooltip" title="My Cart" *ngIf="isJoined == true">
+        <div class="cart_pic text-center" (click)="myCart(item._id)" *ngFor="let item of allDetailsofEvent">
+            <img src="/assets/images/cart.png" data-toggle="tooltip" *ngIf="isCelebrant == false" title="My Cart">
         </div>
         <div class="veiw_event">
             <div class="Join_inner_content_box h-100 mb-3">
@@ -55,7 +55,8 @@
                     <div *ngFor="let item of allDetailsofEvent">
                         <div class="">
                             <button class="btn-primary w-100 joinNowBtn" (click)="joinNow(item._id)"
-                            [disabled]="isDisable" (click)="joinNow(item._id)" *ngIf="isCelebrant == false">Join Now</button>
+                                [disabled]="isDisable" (click)="joinNow(item._id)" *ngIf="isCelebrant == false">Join
+                                Now</button>
                             <div class="all_event_details">
                                 <div class="row">
                                     <div class="col-4 pr-0">
@@ -76,9 +77,10 @@
                                 </div>
                             </div>
                         </div>
+                        <div *ngFor="let activity of activityArray">
+                        </div>
                         <div class="activity_slider">
-                            <div class="
-                                " *ngFor="let activity of activityArray">
+                            <div class="" *ngFor="let activity of activityArray">
                                 <p class="text-center first_day_activity" data-toggle="tooltip" data-placement="top"
                                     title="Activity:{{activity.activityName}}">Activity:{{activity.activityName}}</p>
                                 <div class="activity_group_slider">
@@ -102,7 +104,8 @@
                                                                 <div class="col-6">
                                                                     <div class="add_to_cart_btn"
                                                                         (click)="addToCart(item._id,male._id)">
-                                                                        <a class="text-white" *ngIf="isJoined == true">Add to Cart</a>
+                                                                        <a class="text-white"
+                                                                            *ngIf="isJoined == true">Add to Cart</a>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -128,7 +131,8 @@
                                                                 <div class="col-6">
                                                                     <div class="add_to_cart_btn"
                                                                         (click)="addToCart(item._id,female._id)">
-                                                                        <a class="text-white" *ngIf="isJoined == true">Add to Cart</a>
+                                                                        <a class="text-white"
+                                                                            *ngIf="isJoined == true">Add to Cart</a>
                                                                     </div>
                                                                 </div>
                                                             </div>
