--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -202,34 +202,39 @@
 </section> -->
 
 <section class="collection_slider_section d-flex flex-wrap align-content-center">
-        <div class="container-fluid">
-            <div class="collection-overlay">
+    <div class="container-fluid">
+        <h3 class="text-center">Aso Ebi</h3>
+        <!-- collection slider starts -->
+        <div class="collection-overlay">
             <div id="overlay" class="new_event_menu_box" style="display: none;">
                 <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
-                    <a class="text-white "><img src="/assets/images/overlay.png">
-                        <p>Collections</p>
+                    <a href="javascript:void(0)" class="text-white "><img src="/assets/images/overlay.png">
+                        <p>New Event</p>
                     </a>
                 </div>
-                <div>
+                <div class="">
+
                     <div class="event_menu">
                         <div class="all_menu_content  d-flex flex-wrap align-content-center">
                             <ul>
-                                <li><a routerLink="/home" class="text-white new_event">Home</a></li>
-                                <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
-                                <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
+                                <li><a routerLink="/myEvent" class="text-white text-center new_event">my
+                                        event</a>
                                 </li>
-                                <li><a routerLink="/bankDetails" class="text-white my_account">bank
-                                        account</a></li>
-                                <li><a routerLink="/reset-password" class="text-white my_account">Reset
+                                <li><a routerLink="/createEvent" class="text-white text-center my_event">new
+                                        event</a></li>
+                                <li><a routerLink="/bankDetails" class="text-white text-center my_account">bank
+                                        account</a>
+                                </li>
+                                <li><a routerLink="/reset-password" class="text-white text-center my_account">Reset
                                         Password</a></li>
-                                <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
+                                <li><a (click)="logout()" class="text-white text-center my_account">Logout</a>
+                                </li>
+                                <li><a href="#" class="text-white text-center my_messages">Messages</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <h3 class="text-center">Aso Ebi</h3>
-            <!-- collection slider starts -->
             <div class="collection_slider">
                 <!-- 1st slide -->
                 <div class="coll_slide slide_one" *ngFor="let money of activitiesCollections; let k = index;">
@@ -254,10 +259,12 @@
                                 <a class="text-white float-left text-center">Total</a>
                                 <a class="text-white float-right text-center">GuestList</a>
                             </div>
-                            <h3 class="number text-white text-center">{{maleTotal+femaleTotal | currency:"&#x20A6;"}}</h3>
+                            <h3 class="number text-white text-center">{{maleTotal+femaleTotal | currency:"&#x20A6;"}}
+                            </h3>
                             <div class="inner_box_content">
                                 <div class="inner_title">
-                                    <h3 class="text-white">{{money._id}} ({{money.totalPrice | currency:"&#x20A6;"}} )</h3>
+                                    <h3 class="text-white">{{money._id}} ({{money.totalPrice | currency:"&#x20A6;"}} )
+                                    </h3>
                                 </div>
                                 <div>
                                     <div class="row">
@@ -291,7 +298,7 @@
                     </div>
                 </div>
                 <!-- 1st slide end -->
-    
+
                 <!-- 4th slide -->
                 <div class="coll_slide slide_four">
                     <div class="event_inner_content_box">
@@ -341,7 +348,7 @@
                     </div>
                 </div>
                 <!-- 4th slide end -->
-    
+
                 <!-- 5th slide -->
                 <div class="coll_slide slide_five">
                     <div class="event_inner_content_box">
@@ -365,7 +372,8 @@
                                 <a (click)="totalCost('slide_four')" class="text-white float-left text-center">Total</a>
                                 <a class="text-white float-right text-center">GuestList</a>
                             </div>
-                            <h3 class="number text-white text-center"><a><img src="/assets/images/search.png"></a><a><img
+                            <h3 class="number text-white text-center"><a><img
+                                        src="/assets/images/search.png"></a><a><img
                                         src="/assets/images/download.png"></a> Share point. 412</h3>
                             <div class="inner_box_content">
                                 <div class="scrollbar-rail scroll_content">
@@ -388,13 +396,13 @@
                 <!-- 5th slide end -->
             </div>
             <!-- collection slider ends -->
-    
+
             <div id="overlay" class="new_event_menu_box" style="display: none;">
-                <!-- <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
+                <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
                 <a class="text-white "><img src="/assets/images/overlay.png">
                     <p>Collections</p>
                 </a>
-            </div> -->
+            </div>
                 <div class="">
                     <div class="event_menu">
                         <div class="all_menu_content  d-flex flex-wrap align-content-center">
@@ -415,9 +423,4 @@
             </div>
         </div>
     </div>
-    </section>
-
-
-
-
-    
+</section>
