--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
       <li><a href="#"><i class="fa fa-th-list" aria-hidden="true"></i><span>Total Users</span></a></li>
       <li><a href="#"><i class="fa fa-desktop"></i><span>Total Events</span></a></li>
       <li><a href="#"><i class="fa fa-calendar"></i><span>Settings</span></a></li>
-      <li><a href="#"><i class="fa fa-th-list" aria-hidden="true"></i><span>LogOut</span></a></li>
+      <li><a (click)="logout()"><i class="fa fa-th-list" aria-hidden="true"></i><span>LogOut</span></a></li>
     </ul>
   </div>
 </div>
