--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,7 +23,7 @@
 							</div>
 						</div>
 						<div class="col-sm-10 col-xs-12 social_media_login">
-							<div class="row">
+							<div class="row social_Login">
 								<div class="col-6 p-0">
 									<div class="facebook_sec">
 										<a (click)="signWithFacebook();">
