--- a/src/app/messages-of-event/messages-of-event.component.html
+++ b/src/app/messages-of-event/messages-of-event.component.html
@@ -23,7 +23,7 @@
                     </div>
                     <div id="overlay" class="new_event_menu_box" style="display: none;">
                         <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
-                            <a class="text-white "><img src="/assets/images/overlay.png">
+                            <a class="text-white "><img src="/assets/images/eventD_icon.png">
                                 <p>New Event</p>
                             </a>
                         </div>
@@ -144,11 +144,35 @@
                             <div class="row">
                                 <div class="col-3 m-auto pr-0 float-right new_event_menu">
                                     <a><img src="/assets/images/edit_event_icon.png">
-                                        <p class="text-white">New Event</p>
+                                        <p class="text-white">Edit Event</p>
                                     </a>
                                 </div>
                                 <div class="col-9 p-0">
                                     <span class="text-white event_name"> Hello {{userName}} </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="overlay" class="new_event_menu_box" style="display: none;">
+                            <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
+                                <a class="text-white "><img src="/assets/images/edit_event_icon.png">
+                                    <p>New Event</p>
+                                </a>
+                            </div>
+                            <div class="">
+                                <div class="event_menu">
+                                    <div class="all_menu_content  d-flex flex-wrap align-content-center">
+                                        <ul>
+                                        <li><a routerLink="/home" class="text-white new_event">Home</a></li>
+                                        <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
+                                        <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
+                                        </li>
+                                        <li><a routerLink="/bankDetails" class="text-white my_account">bank
+                                                account</a></li>
+                                        <li><a routerLink="/reset-password" class="text-white my_account">Reset
+                                                Password</a></li>
+                                        <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
