--- a/src/app/my-cart/my-cart.component.html
+++ b/src/app/my-cart/my-cart.component.html
@@ -8,8 +8,8 @@
     <section class="buying_option1_section d-flex flex-wrap align-content-center ">
         <div class="container-fluid">
             <h3 class="text-white text-center Aso_title">Aso Ebi</h3>
-            <div class="profile_pic  text-center">
-                <img src="{{path}}{{eventDetails.profilePhoto}}">
+            <div class="profile_pic text-center ">
+                <img src="{{path}}{{eventDetails.profilePhoto}}" class="rounded-circle">
             </div>
             <h3 class="text-center text-white user_name" *ngIf="eventDetails"> {{eventDetails.hashTag}}</h3>
             <div class="card_inner_content_box">
@@ -77,8 +77,8 @@
                             </div>
                         </div>
 
-                        <div *ngIf="cartDetails.length == 0">
-                            <h1>Sorry, No more item added into the cart.To add item into cart <a (click)="viewEvent(eventId)">Click Here </a> </h1>
+                        <div *ngIf="cartDetails.length == 0" class="text-white text-center">
+                            <h1 class="sorry_msg">Sorry, No more item added into the cart.To add item into cart <a (click)="viewEvent(eventId)">Click Here </a> </h1>
                         </div>
                         <div class="radio_btn text-white " *ngIf="cartDetails.length>0">
                             <p class="event_name_new" *ngIf="eventDetails"> {{eventDetails.eventType}}</p>
