--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -9,7 +9,7 @@
         <div class="container-fluid">
             <h3 class="text-center text-center Aso_title">Aso Ebi</h3>
             <div class="profile_pic text-center text-center">
-                <img src="/assets/images/profile.png">
+                <img src="/assets/images/profile.png" class="rounded-circle">
             </div>
             <h3 class="text-center text-center user_name"> hi</h3>
             <div class="card_inner_content_box5">
@@ -37,7 +37,7 @@
                         <div class="radio_btn text-white">
                             <p class="event_name_new"> ji</p>
                             <div class="event_prise_detail">
-                                <p class="gender_select">Male</p>
+                                <p class="gender_select">Male</p>rounded-circle
                                 <div class="row" *ngFor="let item of finalCartDetails">
                                     <div class="col-7">
                                         <div class="row">
@@ -134,7 +134,7 @@
         <div class="container-fluid">
             <h3 class="text-center text-white Aso_title">Aso Ebi</h3>
             <div class="profile_pic text-center text-center">
-                <img src="{{path}}{{eventDetails.profilePhoto}}">
+                <img src="/assets/images/profile.png" class="rounded-circle">
             </div>
             <h3 class="text-center text-white user_name"># Ayo Kunbi</h3>
             <div class="card_inner_content_box">
